--- a/config/database.yml
+++ b/config/database.yml
@@ -50,6 +50,6 @@ test:
 production:
   <<: *default
   database: chatspace_production
-  username: chatspace
+  username: root
   password: <%= ENV['CHATSPACE_DATABASE_PASSWORD'] %>
   socket: /var/lib/mysql/mysql.sock
