--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,11 @@ jobs:
             bundle install --jobs=4 --retry=3 --path vendor/bundle
           no_output_timeout: 15m
 
+      # Rubocop
+      - run:
+          name: Rubocop
+          command: bundle exec rubocop
+
       - save_cache:
           paths:
             - ./vendor/bundle
@@ -54,7 +59,7 @@ jobs:
 
       # run tests!
       - run:
-          name: run tests
+          name: run Rspec
           command: |
             mkdir /tmp/test-results
             TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | \
