--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,15 +27,15 @@ jobs:
             - v1-dependencies-{{ checksum "Gemfile.lock" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
-      - run:
-          name: setup bundler
-          command: |
-            sudo gem update --system
-            sudo gem uninstall bundler
-            sudo rm /usr/local/bin/bundle
-            sudo rm /usr/local/bin/bundler
-            sudo gem install bundler
-          no_output_timeout: 60m
+      # - run:
+      #     name: setup bundler
+      #     command: |
+      #       sudo gem update --system
+      #       sudo gem uninstall bundler
+      #       sudo rm /usr/local/bin/bundle
+      #       sudo rm /usr/local/bin/bundler
+      #       sudo gem install bundler
+      #     no_output_timeout: 60m
 
       - run:
           name: install dependencies
