--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,8 @@ jobs:
       - image: circleci/ruby:2.4.1-node-browsers
         environment:
           BUNDLER_VERSION: 2.0.1
-
+          DB_HOST: 127.0.0.1
+      - image: circleci/mysql:5.7
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
