--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,7 @@ default: &default
 development:
   <<: *default
   database: chatspace_development
+  host: <%= ENV['DB_HOST'] %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
